# poe-companion

./: .eslintrc.json  .gitignore  README.md  nx.json  package.json  tsconfig.base.json
apps/main/: project.json  webpack.config.js
apps/main/src/: index.html  main.tsx
apps/main/src/app/: app.tsx
apps/main/src/app/components/: LangugeSelector.tsx  SelectPathToFile.tsx  ShortcutsManager.tsx
apps/main/src/assets/fonts/: fonts.css  fonts.d.ts
apps/tauri/: Cargo.toml  project.json  tauri.conf.json
apps/tauri/src/: main.rs
apps/tauri/src/app/: mod.rs
apps/tauri/src/file/: mod.rs
apps/tauri/src/file_watcher/: Cargo.toml
apps/tauri/src/file_watcher/src/: file_watcher.rs  lib.rs
apps/tauri/src/system_tray/: mod.rs
apps/widget/: project.json
apps/widget-e2e/: project.json
apps/widget-e2e/src/e2e/: app.cy.ts
apps/widget/src/app/: app.tsx
libs/clipboard-manager/: README.md  jest.config.ts  project.json
libs/clipboard-manager/src/: index.ts
libs/clipboard-manager/src/lib/: clipboard-manager.spec.ts  clipboard-manager.ts
libs/core/: README.md
libs/react-components/: README.md  project.json  tsconfig.json
libs/react-components/src/lib/: react-components.tsx
libs/settings-manager/: README.md  jest.config.ts  project.json
libs/settings-manager/src/: index.ts
libs/settings-manager/src/lib/: settings-manager.spec.ts  settings-manager.ts
libs/translations/: README.md  jest.config.ts  project.json
libs/translations/src/languages/: index.ts
libs/translations/src/languages/en/: en.json
libs/translations/src/lib/: translations.spec.ts  translations.ts
(+6 files in other folders)
