[package]
name = "poe-companion"
version = "0.0.1"
description = ""
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "global-shortcut-all", "path-all", "shell-open", "system-tray", "window-set-cursor-grab", "window-set-cursor-position", "window-set-ignore-cursor-events"] }
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
tokio = { version = "1.20.1", features = ["full"] }
sysinfo = "0.27.7"
tauri-plugin-positioner = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
log = "^0.4"
notify = "5.1.0"
file_watcher = {path = "src/file_watcher"}
rdev = "0.5.2"
enigo = "0.0.14"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
